--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-# oTree-may-overwrite-this-file
-# IF YOU MODIFY THIS FILE, remove these comments. 
-# otherwise, oTree will automatically overwrite it.
-otree>=5.0.0a24
+# oTree-may-not-overwrite-this-file
+otree>=5.1.8
 psycopg2>=2.8.4
-sentry-sdk==0.7.9
+sentry-sdk>=0.7.9
+numpy>=1.18
+pandas>=1.2.4
+openpyxl>= 3.0.6
+xlrd>=1.0.0
